--- a/pods.yaml
+++ b/pods.yaml
@@ -1,28 +1,22 @@
-apiVersion: v1
-kind: Pod
+
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
   name: webapp
-  labels:
-    app: webapp
-    release: "0"
 spec:
-  containers:
-  - name: webapp
-    image: richardchesterwood/k8s-fleetman-webapp-angular:release0
-
----
-
-apiVersion: v1
-kind: Pod
-metadata:
-  name: webapp-release-0-5
-  labels:
-    app: webapp
-    release: "0-5"
-spec:
-  containers:
-  - name: webapp
-    image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
+  selector:
+    matchLabels:
+      app: webapp
+  replicas: 2
+  template: #template for the pods
+    metadata:
+      labels:
+        app: webapp
+        release: "0-5"
+    spec:
+      containers:
+      - name: webapp
+        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
 
 ---
 
