--- a/pods.yaml
+++ b/pods.yaml
@@ -1,9 +1,10 @@
 
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
   name: webapp
 spec:
+  #minReadySeconds: 30
   selector:
     matchLabels:
       app: webapp
