added persistent volume locally as pv

--- a/mongo-stack.yaml
+++ b/mongo-stack.yaml
@@ -17,6 +17,16 @@ spec:
       containers:
       - name: mongodb
         image: mongo:3.6.5-jessie
+        volumeMounts:
+          - name: mongo-persistent-storage
+            mountPath: /data/db
+      volumes:
+        - name: mongo-persistent-storage
+          #pointer to the configuration of How we want the mount to be implemented.
+          hostPath:
+            path: /mnt/some/directory/structure/
+            type: DirectoryOrCreate
+            #aws things.
 
 ---
 
