added persistent volume claim and point it to a volume

--- a/mongo-stack.yaml
+++ b/mongo-stack.yaml
@@ -23,10 +23,9 @@ spec:
       volumes:
         - name: mongo-persistent-storage
           #pointer to the configuration of How we want the mount to be implemented.
-          hostPath:
-            path: /mnt/some/directory/structure/
-            type: DirectoryOrCreate
-            #aws things.
+          persistentVolumeClaim:
+            claimName: mongo-pvc
+
 
 ---
 
